[package]
name = "bb_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bb_runner"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
nix = { version = "0.29.0", features = ["hostname", "process", "sched", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
