[package]
name = "bb_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bb_runner"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7" }
nix = { version = "0.31", features = ["fs", "hostname", "ioctl", "mman", "mount", "process", "sched", "signal", "socket", "user"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rsjsonnet-front = "0.5"
rsjsonnet-lang = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"
